syntax = "proto3";
package stride.stakeibc;

import "stride/stakeibc/ica_account.proto";
import "stride/stakeibc/validator.proto";

option go_package = "github.com/Stride-Labs/stride/v11/x/stakeibc/types";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the Msg service.
service Msg {
  rpc LiquidStake(MsgLiquidStake) returns (MsgLiquidStakeResponse);
  rpc RedeemStake(MsgRedeemStake) returns (MsgRedeemStakeResponse);
  rpc ClaimUndelegatedTokens(MsgClaimUndelegatedTokens)
      returns (MsgClaimUndelegatedTokensResponse);
  rpc RebalanceValidators(MsgRebalanceValidators)
      returns (MsgRebalanceValidatorsResponse);
  rpc RestoreInterchainAccount(MsgRestoreInterchainAccount)
      returns (MsgRestoreInterchainAccountResponse);
  rpc UpdateValidatorSharesExchRate(MsgUpdateValidatorSharesExchRate)
      returns (MsgUpdateValidatorSharesExchRateResponse);
}

message MsgLiquidStake {
  string creator = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string host_denom = 3;
}

message MsgLiquidStakeResponse {}

message MsgRedeemStake {
  string creator = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string host_zone = 3;
  string receiver = 4;
}

message MsgRedeemStakeResponse {}

message MsgClaimUndelegatedTokens {
  string creator = 1;
  // UserUnbondingRecords are keyed on {chain_id}.{epoch}.{sender}
  string host_zone_id = 2;
  uint64 epoch = 3;
  string sender = 4;
}

message MsgClaimUndelegatedTokensResponse {}

message MsgRebalanceValidators {
  string creator = 1;
  string host_zone = 2;
  uint64 num_rebalance = 3;
}
message MsgRebalanceValidatorsResponse {}

message MsgRestoreInterchainAccount {
  string creator = 1;
  string chain_id = 2;
  ICAAccountType account_type = 3;
}
message MsgRestoreInterchainAccountResponse {}

message MsgUpdateValidatorSharesExchRate {
  string creator = 1;
  string chain_id = 2;
  string valoper = 3;
}
message MsgUpdateValidatorSharesExchRateResponse {}
